--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=58.0.0
+pip>=24.3.1
 ﻿absl-py==2.1.0
 alembic==1.12.1
 altair==5.0.1
@@ -207,6 +209,7 @@ wcwidth==0.2.13
 webencodings==0.5.1
 websocket-client==1.6.1
 Werkzeug==2.0.3
+wheel
 whitenoise==6.5.0
 widgetsnbextension==4.0.11
 wrapt==1.16.0
