--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 setuptools>=58.0.0
 pip>=24.3.1
-﻿absl-py==2.1.0
+absl-py==2.1.0
 alembic==1.12.1
 altair==5.0.1
 amqp==5.2.0
@@ -206,13 +206,12 @@ validators==0.20.0
 vine==5.1.0
 watchdog==3.0.0
 wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.6.1
+webencodings==0.6.0
+websocket-client==1.6.4
 Werkzeug==2.0.3
-wheel
-whitenoise==6.5.0
-widgetsnbextension==4.0.11
-wrapt==1.16.0
+widgetsnbextension==4.0.8
+wrapt==1.15.0
+wsproto==1.2.0
 xlrd==2.0.1
-zipp==3.15.0
-gunicorn
+yarl==1.9.1
+zipp==3.17.0
