--- a/requirements.txt
+++ b/requirements.txt
@@ -209,6 +209,7 @@ wcwidth==0.2.13
 webencodings==0.6.0
 websocket-client==1.6.4
 Werkzeug==2.0.3
+wheel
 widgetsnbextension==4.0.8
 wrapt==1.15.0
 wsproto==1.2.0
