--- a/requirements.txt
+++ b/requirements.txt
@@ -116,7 +116,7 @@ notebook==6.5.7
 notebook_shim==0.2.4
 numpy>=1.21.0
 opencv-contrib-python==4.10.0.84
-opencv-python==4.2.0.32
+opencv-python==4.6.0.66  # Updated version for Python 3.11
 openpyxl==3.0.9
 packaging==23.2
 pandas==1.1.5
@@ -198,21 +198,16 @@ tornado==6.2
 tqdm==4.66.4
 traitlets==5.9.0
 typing-inspect==0.9.0
-typing_extensions==4.7.1
-tzdata==2024.1
-tzlocal==4.3.1
-urllib3==1.26.6
-validators==0.20.0
-vine==5.1.0
-watchdog==3.0.0
-wcwidth==0.2.13
-webencodings==0.6.0
-websocket-client==1.6.4
-Werkzeug==2.0.3
-wheel
-widgetsnbextension==4.0.8
-wrapt==1.15.0
-wsproto==1.2.0
+typing-extensions==4.8.0
+urllib3==1.26.11
+vdk==1.0.0
+wcwidth==0.2.6
+Werkzeug==2.1.2
+wheel>=0.38.0
+wincertstore==0.2
+wltk==0.1.0
 xlrd==2.0.1
-yarl==1.9.1
-zipp==3.17.0
+xlwings==0.30.0
+yara-python==4.5.0
+zipp==3.13.0
+zope.interface==5.6.0
