--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# Corrected pytz_deprecation_shim version that works with Python 3.11
+pytz_deprecation_shim>=0.1.0.post0
+
+# Add the necessary packages with compatible versions for Python 3.11
 setuptools>=58.0.0
 pip>=24.3.1
 absl-py==2.1.0
@@ -116,7 +120,7 @@ notebook==6.5.7
 notebook_shim==0.2.4
 numpy>=1.21.0
 opencv-contrib-python==4.10.0.84
-opencv-python==4.6.0.66  # Updated version for Python 3.11
+opencv-python==4.2.0.32
 openpyxl==3.0.9
 packaging==23.2
 pandas==1.1.5
@@ -154,10 +158,6 @@ python-dateutil==2.9.0.post0
 python-docx==1.1.0
 python-dotenv==0.19.0
 pytz==2024.1
-pytz-deprecation-shim==0.1.0.post0
-pywin32==306
-pywinpty==2.0.10
-PyYAML==6.0.1
 pyzmq==26.0.3
 qtconsole==5.4.4
 QtPy==2.4.1
@@ -198,16 +198,16 @@ tornado==6.2
 tqdm==4.66.4
 traitlets==5.9.0
 typing-inspect==0.9.0
-typing-extensions==4.8.0
-urllib3==1.26.11
-vdk==1.0.0
-wcwidth==0.2.6
-Werkzeug==2.1.2
-wheel>=0.38.0
-wincertstore==0.2
-wltk==0.1.0
-xlrd==2.0.1
-xlwings==0.30.0
-yara-python==4.5.0
-zipp==3.13.0
-zope.interface==5.6.0
+typing_extensions==4.7.1
+tzdata==2024.1
+tzlocal==4.3.1
+urllib3==1.26.6
+validators==0.20.0
+vine==5.1.1
+waitress==2.2.0
+Werkzeug==2.2.3
+wheel
+widgetsnbextension==5.9.0
+xgboost==1.7.5
+yarl==1.8.2
+zipp==3.15.0
