--- a/requirements.txt
+++ b/requirements.txt
@@ -118,7 +118,7 @@ nest-asyncio==1.6.0
 nltk==3.8.1
 notebook==6.5.7
 notebook_shim==0.2.4
-numpy>=1.21.0
+numpy==1.23.5
 opencv-contrib-python==4.10.0.84  # Compatible with Python 3.11
 opencv-python==4.10.0.84  # Updated to a compatible version
 openpyxl==3.0.9
