--- a/requirements.txt
+++ b/requirements.txt
@@ -1,210 +1,7 @@
-# Corrected pytz_deprecation_shim version that works with Python 3.11
-pytz_deprecation_shim>=0.1.0.post0
-
-# Add the necessary packages with compatible versions for Python 3.11
-setuptools>=58.0.0
-pip>=24.3.1
-absl-py==2.1.0
-alembic==1.12.1
-altair==5.0.1
-amqp==5.2.0
-anyio==3.7.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.7.2
-astor==0.8.1
-attrs==23.2.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.12.3
-billiard==3.6.4.0
-bleach==6.0.0
-blinker==1.6.3
-cached-property==1.5.2
-cachetools==4.2.4
-celery==5.2.7
-certifi==2024.6.2
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==3.3.2
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-comm==0.1.4
-Cython>=0.29.21
-cryptography==2.9.2
-cycler==0.11.0
-deap==1.4.1
-debugpy==1.7.0
-decorator==5.1.1
-defusedxml==0.7.1
-Django==3.2.25
-django-crispy-forms==2.0
-dnspython==2.3.0
-docx2pdf==0.1.8
-email-validator==1.1.3
-entrypoints==0.4
-escape==1.1
-et-xmlfile==1.1.0
-exceptiongroup==1.2.1
-Faker==18.13.0
-fastjsonschema==2.20.0
-Flask==2.0.3
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Migrate==3.1.0
+Flask==2.2.5
 Flask-SQLAlchemy==2.5.1
-future==1.0.0
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.19.0
-google-auth==2.30.0
-google-cloud-core==2.4.1
-google-cloud-datastore==2.1.0
-google-cloud-storage==2.17.0
-google-crc32c==1.5.0
-google-pasta==0.2.0
-google-resumable-media==2.7.1
-googleapis-common-protos==1.63.1
-greenlet==3.0.3
-grpcio==1.62.2
-grpcio-status==1.48.2
-h5py==2.10.0
-idna==2.10
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
-imutils==0.5.4
-iniconfig==2.0.0
-ipykernel==6.16.2
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.3
-itsdangerous==2.0.1
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.3.2
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-server==1.24.0
-jupyter_client==7.4.9
-jupyter_core==4.12.0
-jupyterlab-pygments==0.2.2
-jupyterlab_widgets==3.0.11
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.5
-kombu==5.2.4
-libcst==1.0.1
-lxml==5.3.0
-Mako==1.2.4
-Markdown==3.4.4
-markdown-it-py==2.2.0
-MarkupSafe==2.1.5
-matplotlib==3.1.3
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.2
-mypy-extensions==1.0.0
-nbclassic==1.1.0
-nbclient==0.7.4
-nbconvert==7.6.0
-nbformat==5.8.0
-nest-asyncio==1.6.0
-nltk==3.8.1
-notebook==6.5.7
-notebook_shim==0.2.4
-numpy>=1.21.0
-opencv-contrib-python==4.10.0.84  # Compatible with Python 3.11
-opencv-python==4.10.0.84  # Updated to a compatible version
-openpyxl==3.0.9
-packaging==23.2
-pandas==1.1.5
-pandocfilters==1.5.1
-parso==0.8.4
-patsy==0.5.6
-pbkdf2==1.3
-pdf2image==1.17.0
-pickleshare==0.7.5
-Pillow==9.5.0
-pkgutil_resolve_name==1.3.10
-pluggy==1.2.0
-pocketsphinx==5.0.3
-prometheus-client==0.17.1
-prompt_toolkit==3.0.47
-proto-plus==1.23.0
-protobuf==3.20.3
-psutil==6.0.0
-pyaes==1.6.1
-pyarrow==12.0.1
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pycryptodome==3.10.1
-pydeck==0.8.1b1
-Pygments==2.17.2
-Pympler==1.1
-PyMySQL==0.9.3
-pyparsing==3.1.2
-pyrsistent==0.19.3
-pyswarms==1.1.0
-pytesseract==0.3.10
-pytest==7.4.4
-python-dateutil==2.9.0.post0
-python-docx==1.1.0
-python-dotenv==0.19.0
-pytz==2024.1
-pyzmq==26.0.3
-qtconsole==5.4.4
-QtPy==2.4.1
-regex==2024.4.16
-requests==2.31.0
-rich==13.8.0
-rsa==4.9
-scikit-learn==0.22.2.post1
-scipy==1.10.1
-seaborn==0.12.2
-Send2Trash==1.8.3
-six==1.16.0
-sklearn-extensions==0.0.2
-sklearn-genetic==0.2
-smmap==5.0.1
-sniffio==1.3.1
-sounddevice==0.4.7
-soupsieve==2.4.1
-SpeechRecognition==3.9.0
-SQLAlchemy==1.4.32
-sqlparse==0.4.4
-statsmodels==0.13.5
-streamlit==1.23.1
-SwarmPackagePy==1.0.0a5
-tenacity==8.2.3
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorboard==2.11.0
-termcolor==2.3.0
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-tk==0.1.0
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-tornado==6.2
-tqdm==4.66.1
-traitlets==5.9.1
-twilio==6.81.0
-typed-ast==1.5.0
-typing-extensions==4.7.1
-urllib3==1.26.15
-watchdog==2.2.0
-werkzeug==2.2.3
-wheel==0.41.1
-widgetsnbextension==5.9.0
-xgboost==1.7.5
-yarl==1.8.2
-zipp==3.15.0
+Flask-Login==0.6.3
+Flask-Migrate==3.1.0
+pandas==1.5.3
+email-validator==2.0.0
+gunicorn
